<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tak-Tix</string>
    <string name="action_settings">Settings</string>
    <string name="Newgame">New game</string>
    <string name="Settings">Settings</string>
    <string name="About">About</string>
    <string name="Exit">Exit</string>
    <string name="about_text">Placed on the board n*n identical tiles, each field one by one. Players take turns a few chips of one vertical, or horizontal row of the row containing no holes. The player who is forced to take the last piece. </string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_play">PlayActivity</string>
    <string name="play">Play</string>
    <string name="player">Player</string>
    <string name="player_win">You win</string>
    <string name="cpu">Lost</string>
    <string name="cpu_win">You lost</string>
    <string name="gameover">Game over</string>
    <string name="size">size</string>
    <string name="Boardsize">Board size</string>
    <string name="victory">victory</string>
    <string name="victory_cond">Victory condition</string>
    <string name="set_victory">Who took last wins</string>
    <string name="lang">language</string>
    <string name="language">Language</string>

</resources>
